# md-editor

./: README.md  index.html  package-lock.json  package.json
docs/brainstorms/: 2026-05-03-ui-improvements-requirements.md  atmospheric-redesign-requirements.md  scroll-sync-requirements.md  vscode-experience-requirements.md
docs/plans/: 2026-04-08-001-feat-scroll-sync-plan.md  2026-04-09-001-feat-vscode-experience-plan.md  2026-04-09-002-feat-atmospheric-redesign-plan.md  2026-05-03-001-feat-ui-improvements-plan.md
src/: activity-bar.ts  atmospheric-theme.ts  bottom-bar.ts  editor-context-menu.ts  editor.ts  file-tree.ts  icons.ts  main.ts  preview.ts  scroll-sync.ts  search-panel.ts  settings-panel.ts  shortcuts-modal.ts  sidebar.ts  statusbar.ts  styles.css  tab-bar.ts  url-popover.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  markdown.rs
src-tauri/src/commands/: files.rs  markdown.rs  mod.rs
