[package]
name = "md-editor"
version = "0.1.0"
edition = "2021"

[lib]
name = "md_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "md-editor"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
comrak = { version = "0.52", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
